# linearalgebra-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: matrix_bench.rs
examples/mnist/: .gitignore  Cargo.toml  README.md  run.sh
examples/mnist/src/: main.rs
src/: lib.rs  numlib.rs
src/matrix/: mat_display.rs  mat_impl.rs  mat_mul.rs  mod.rs
src/matrix/mat_mul/: mat_mul.rs  mat_mul_simd.rs  mod.rs
src/numlib/: mod.rs  one.rs  zero.rs
src/vector/: mod.rs  vec_impl.rs  vec_ops.rs
tests/: matrix.rs  matrix_simd.rs  vector.rs
