[package]
name = "linearalgebra"
version = "0.2.0"
edition = "2021"

license = "MIT"
description = "Test project to learn Rust and implement a small library for linear algebra"
homepage = "https://github.com/einstein8612/linearalgebra-rust/"
documentation = "https://github.com/einstein8612/linearalgebra-rust/"
repository = "https://github.com/einstein8612/linearalgebra-rust/"
readme = "README.md"

[features]
simd = []

[dependencies]
rayon = "1.7"

[dev-dependencies]
rand = "0.8.5"